[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Kenney/Tiles/doorClosed_top.png" type="Texture" id=1]
[ext_resource path="res://Assets/Kenney/Tiles/doorClosed_mid.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Door.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 28.75, 70.8635 )

[sub_resource type="Animation" id=2]
resource_name = "CloseTheDoor"
tracks/0/type = "value"
tracks/0/path = NodePath("DoorImage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 130 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -28.5 ), Vector2( -1, 101.5 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "OpenTheDoor"
tracks/0/type = "value"
tracks/0/path = NodePath("DoorImage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 130 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( -1, 101.5 ), Vector2( -1, -28.5 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("DoorImage:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -28.5 ) ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 242.5, 131.5 )

[node name="Door" type="Area2D"]
z_index = -5
script = ExtResource( 3 )

[node name="DoorImage" type="Node2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="DoorClosedMid" type="Sprite" parent="DoorImage"]
texture = ExtResource( 2 )

[node name="DoorClosedTop" type="Sprite" parent="DoorImage"]
position = Vector2( 0, -128 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -28.5 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/CloseTheDoor = SubResource( 2 )
anims/OpenTheDoor = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="AnimationTriggerArea" type="Area2D" parent="."]
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimationTriggerArea"]
position = Vector2( 0, -68 )
shape = SubResource( 5 )

[connection signal="body_entered" from="." to="." method="_on_Door_body_entered"]
[connection signal="body_entered" from="AnimationTriggerArea" to="." method="_on_AnimationTriggerArea_body_entered"]
[connection signal="body_exited" from="AnimationTriggerArea" to="." method="_on_AnimationTriggerArea_body_exited"]
